<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2"
    android:background="@color/red">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Input1"
        android:textColor="#FFFFFF"/>
    <EditText
        android:id="@+id/insertTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/InputPrompt1"
        android:textColor="#FFFFFF"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Input2"
        android:textColor="#FFFFFF"/>
    <EditText
        android:id="@+id/insertSingers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/InputPrompt2"
        android:textColor="#FFFFFF"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Input3" />
    <EditText
        android:id="@+id/insertYear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/InputPrompt3"
        android:textColor="#FFFFFF"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Input4"
        android:textColor="#FFFFFF"/>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:textColor="#FFFFFF">

        <RadioButton
            android:id="@+id/radio_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Input4.1"
            android:textColor="#FFFFFF"/>

        <RadioButton
            android:id="@+id/radio_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Input4.2"
            android:textColor="#FFFFFF"/>

        <RadioButton
            android:id="@+id/radio_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Input4.3"
            android:textColor="#FFFFFF"/>

        <RadioButton
            android:id="@+id/radio_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Input4.4"
            android:textColor="#FFFFFF"/>

        <RadioButton
            android:id="@+id/radio_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Input4.5"
            android:textColor="#FFFFFF"/>

    </RadioGroup>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UpdateButton"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/btndelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DeletButton"
            android:textColor="#FFFFFF"/>

    </LinearLayout>
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CancelButton"
        android:textColor="#FFFFFF"/>




</LinearLayout>